# deb-python-seamicroclient

./: .coveragerc  .gitignore  .gitreview  HACKING.rst  LICENSE  MANIFEST.in  README.md  file  openstack-common.conf  requirements.txt  run_tests.sh  runtests.sh  setup.cfg  setup.py  tests.py  tox.ini
debian/: changelog  control  copyright  rules  watch
debian/patches/: fix-requirements.txt.patch
examples/: README.rst  server_example.py
seamicro_api/: __init__.py  seamicro_api.py  seamicro_api_v0_9.py  seamicro_api_v2_0.py  version.py
seamicroclient/: __init__.py  base.py  client.py  exceptions.py  utils.py
seamicroclient/openstack/common/: gettextutils.py  strutils.py
seamicroclient/tests/: fakes.py  test_base.py  test_client.py  test_http.py  utils.py
seamicroclient/tests/functional/v2/: test_pools.py  test_servers.py  test_volumes.py
seamicroclient/tests/v2/: fakes.py  test_SMCards.py  test_chassis.py  test_disks.py  test_fantrays.py  test_interfaces.py  test_pools.py  test_powersupplies.py  test_scards.py  test_servers.py  test_system.py  test_volumes.py
seamicroclient/v2/: __init__.py  chassis.py  client.py  disks.py  fantrays.py  interfaces.py  pools.py  powersupplies.py  scards.py  servers.py  smcards.py  system.py  volumes.py
