[metadata]
name = python-seamicroclient
summary = Client library for Seamicro chassis API
description-file =
    README.md
license = Apache License, Version 2.0
author = AMD
author-email = rohan.kanade@izeltech.com
home-page = https://github.com/seamicro/python-seamicroclient
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Seamicro
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: AMD LICENSE INFO HERE
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    seamicroclient
