[metadata]
name = python-seamicroclient
summary = Client library for Seamicro chassis API
description-file =
    README.md
license = Apache License, Version 2.0
author = AMD
author-email = harshada.kakad@izeltech.com
home-page = https://github.com/seamicro/python-seamicroclient
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    seamicroclient
